Split up application Docker image into multiple images

--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -11,7 +11,7 @@ services:
   app:
     build:
       context: ../app
-      dockerfile: ../devops/Dockerfile
+      dockerfile: ../devops/dockerfiles/app-runner/Dockerfile
     networks:
       - frontend
       - backend
