Add information around Docker setup

--- a/app/config/.env-template
+++ b/app/config/.env-template
@@ -1,6 +1,9 @@
+# Docker Configuration
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
+
+# App Configuration
 DJANGO_DEBUG=
 DJANGO_SECRET_KEY=
 DJANGO_ALLOWED_HOST_NAME=
