Keep build dependencies in the image for now

--- a/devops/dockerfiles/app-dependencies/Dockerfile
+++ b/devops/dockerfiles/app-dependencies/Dockerfile
@@ -5,7 +5,6 @@ RUN mkdir -p /opt/app
 COPY ./requirements.txt /opt/app/
 COPY ./requirements /opt/app/requirements
 
-RUN python3 -m pip install -r /opt/app/requirements.txt --no-cache-dir && \
-    apk --purge del .build-deps
+RUN python3 -m pip install -r /opt/app/requirements.txt --no-cache-dir
 
 WORKDIR /opt/app
