Fix envars for postgres setup

--- a/app/config/.env-template
+++ b/app/config/.env-template
@@ -1,7 +1,7 @@
 # Docker Configuration
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 
 # App Configuration
 DJANGO_DEBUG=
