Update dockerfiles to use explicit versions and fix image building

--- a/devops/dockerfiles/app-runner/Dockerfile
+++ b/devops/dockerfiles/app-runner/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /opt/app
 
 RUN npm i
 
-FROM grhistory/app_deps:latest
+FROM grhistory/app_deps:1.0.0
 
 COPY ./src/ /opt/app/
 COPY ./config/.env /opt/app/.env
